# 2020compiler

./: design.md  irCodeExample.md  main.cpp  optimize.md  readme.md
code/: Syntax.cpp  intermediatecode.cpp  symboltable.cpp  word.h
front/: Syntax.cpp  intermediatecode.cpp  intermediatecode.h  symboltable.cpp  symboltable.h  word.cpp  word.h
ir/: intermediatecode.cpp  intermediatecode.h  ssa.cpp  ssa.h  ssa.md  ssa_test.cpp
ir_example/: ircode1.txt
src/: CMakeLists.txt  main.cpp  testexample.txt
src/arm/: CMakeLists.txt  armgenerate.cpp  armgenerate.h  armgenerate_with_reg.cpp
src/front/: CMakeLists.txt  Syntax.cpp  readme.md  symboltable.cpp  symboltable.h  syntax.h  word.cpp  word.h
src/ir/: CMakeLists.txt  dag.cpp  dataAnalyse.cpp  dataAnalyse.h  intermediatecode.cpp  intermediatecode.h  optimize.cpp  optimize.h  register.cpp  register.h  ssa.cpp  ssa.h  ssa.md  ssa_optimize.cpp  ssa_test.cpp
src/ir_example/: ircode1.txt  ircode2.txt  testcase2.txt
src/util/: CMakeLists.txt  meow.h
ssa/: ssa.cpp  ssa.h  ssa.md
util/: meow.h
